--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
-        "reka-ui": "^2.6.1",
+        "reka-ui": "^2.7.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.13",
         "vue-input-otp": "^0.3.2",
         "vue-router": "^4.6.4",
+        "vue-sonner": "^2.0.9",
         "ziggy-js": "^2.6.0"
     },
     "optionalDependencies": {
