--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.0",
+        "libphonenumber-js": "^1.12.33",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.7.0",
         "tailwind-merge": "^3.2.0",
