--- a/.env.example
+++ b/.env.example
@@ -1,65 +1,76 @@
-APP_NAME=Laravel
+# --- Application Configuration ---
+APP_NAME=Projector
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://projector.test
+APP_TIMEZONE=UTC
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
+# --- Octane / Server ---
+OCTANE_SERVER=frankenphp
 # PHP_CLI_SERVER_WORKERS=4
 
-BCRYPT_ROUNDS=12
+# --- Database ---
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=projector
+DB_USERNAME=
+DB_PASSWORD=
 
+# --- AI & LLM Providers ---
+# Options: gemini, ollama
+LLM_DRIVER=ollama
+GEMINI_API_KEY=
+
+# Ollama Configuration
+OLLAMA_HOST=http://127.0.0.1:11434
+VECTOR_DRIVER=ollama
+
+# --- Services / Drivers ---
 LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=redis
 
-MEMCACHED_HOST=127.0.0.1
-
+# --- Redis ---
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# --- Real-time (Reverb) ---
+BROADCAST_CONNECTION=reverb
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
+REVERB_HOST="0.0.0.0"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+# --- Mail ---
 MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="hello@projector.test"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# --- AWS (Optional) ---
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# --- Frontend (Vite) ---
 VITE_APP_NAME="${APP_NAME}"
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
