--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
+        "@radix-ui/react-progress": "^1.1.8",
         "@tanstack/vue-table": "^8.21.3",
         "@tiptap/starter-kit": "^3.15.3",
         "@tiptap/vue-3": "^3.15.3",
