--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,25 @@
-# --- Application Configuration ---
 APP_NAME=Projector
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://projector.test
-APP_TIMEZONE=UTC
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-# --- Octane / Server ---
-OCTANE_SERVER=frankenphp
+APP_MAINTENANCE_DRIVER=file
+# APP_MAINTENANCE_STORE=database
+
 # PHP_CLI_SERVER_WORKERS=4
 
-# --- Database ---
+BCRYPT_ROUNDS=12
+
+LOG_CHANNEL=stack
+LOG_STACK=single
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
+
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
@@ -22,34 +27,43 @@ DB_DATABASE=projector
 DB_USERNAME=
 DB_PASSWORD=
 
-# --- AI & LLM Providers ---
-# Options: gemini, ollama
-LLM_DRIVER=ollama
-GEMINI_API_KEY=
-
-# Ollama Configuration
-OLLAMA_HOST=http://127.0.0.1:11434
-VECTOR_DRIVER=ollama
-
-# --- Services / Drivers ---
-LOG_CHANNEL=stack
-LOG_LEVEL=debug
-
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
 
-CACHE_STORE=database
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 
-# --- Redis ---
+CACHE_STORE=database
+# CACHE_PREFIX=
+
+MEMCACHED_HOST=127.0.0.1
+
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# --- Real-time (Reverb) ---
-BROADCAST_CONNECTION=reverb
+MAIL_MAILER=log
+MAIL_SCHEME=null
+MAIL_HOST=127.0.0.1
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+VITE_APP_NAME="${APP_NAME}"
+
 REVERB_APP_ID=
 REVERB_APP_KEY=
 REVERB_APP_SECRET=
@@ -57,20 +71,28 @@ REVERB_HOST="0.0.0.0"
 REVERB_PORT=8080
 REVERB_SCHEME=http
 
-# --- Mail ---
-MAIL_MAILER=log
-MAIL_FROM_ADDRESS="hello@projector.test"
-MAIL_FROM_NAME="${APP_NAME}"
+# AI Configuration
+LLM_DRIVER=openai
+VECTOR_DRIVER=openai
 
-# --- AWS (Optional) ---
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+# OpenAI
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_EMBED_MODEL=text-embedding-3-small
 
-# --- Frontend (Vite) ---
-VITE_APP_NAME="${APP_NAME}"
+# Gemini
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-2.0-flash
+GEMINI_EMBED_MODEL=gemini-embedding-001
+
+# Ollama
+OLLAMA_HOST=http://localhost:11434
+OLLAMA_MODEL=deepseek-r1:8b
+OLLAMA_EMBED_MODEL=nomic-embed-text
+
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 VITE_REVERB_HOST="${REVERB_HOST}"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
+OCTANE_SERVER=frankenphp
